{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 96,
  "lineage": "9563606d-0d4d-d27f-a4c7-a890332b3c62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dns_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:912753427850:instance/i-09b6f736ab4c6460f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "private-dns-dns-server-profile",
            "id": "i-09b6f736ab4c6460f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09b9bf91357351eb8",
            "private_dns": "ip-10-0-1-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:912753427850:key/d15012ee-a031-43f7-85cd-537d1aafa39c",
                "throughput": 125,
                "volume_id": "vol-0cbe752b276a3994a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058042edc896dffa7",
            "tags": {
              "Name": "private-dns-dns-server-1"
            },
            "tags_all": {
              "Name": "private-dns-dns-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fbcc40fdf7d500d0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dns_server",
            "aws_iam_role.dns_server",
            "aws_security_group.dns_server",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:912753427850:instance/i-01bad253de819d520",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "private-dns-dns-server-profile",
            "id": "i-01bad253de819d520",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d1e57e9e4ee27b6",
            "private_dns": "ip-10-0-2-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:912753427850:key/d15012ee-a031-43f7-85cd-537d1aafa39c",
                "throughput": 125,
                "volume_id": "vol-0c06822d9f30f344b",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01218a8944ae46552",
            "tags": {
              "Name": "private-dns-dns-server-2"
            },
            "tags_all": {
              "Name": "private-dns-dns-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fbcc40fdf7d500d0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dns_server",
            "aws_iam_role.dns_server",
            "aws_security_group.dns_server",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0453ec754f44f9a4a",
            "arn": "arn:aws:ec2:us-east-1:912753427850:instance/i-02e4de1db486a185c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "private-dns-dns-server-profile",
            "id": "i-02e4de1db486a185c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-005ef4a182d80a202",
            "private_dns": "ip-10-0-3-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:912753427850:key/d15012ee-a031-43f7-85cd-537d1aafa39c",
                "throughput": 125,
                "volume_id": "vol-0be6280484ad35fe1",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c74c5a4f555d8bd",
            "tags": {
              "Name": "private-dns-dns-server-3"
            },
            "tags_all": {
              "Name": "private-dns-dns-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fbcc40fdf7d500d0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dns_server",
            "aws_iam_role.dns_server",
            "aws_security_group.dns_server",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dns_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:loadbalancer/net/private-dns-dns-nlb/203e9635d0bb75bf",
            "arn_suffix": "net/private-dns-dns-nlb/203e9635d0bb75bf",
            "dns_name": "private-dns-dns-nlb-203e9635d0bb75bf.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:loadbalancer/net/private-dns-dns-nlb/203e9635d0bb75bf",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "private-dns-dns-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01218a8944ae46552"
              },
              {
                "subnet_id": "subnet-058042edc896dffa7"
              },
              {
                "subnet_id": "subnet-08c74c5a4f555d8bd"
              }
            ],
            "subnets": [
              "subnet-01218a8944ae46552",
              "subnet-058042edc896dffa7",
              "subnet-08c74c5a4f555d8bd"
            ],
            "tags": {
              "Name": "private-dns-dns-nlb"
            },
            "tags_all": {
              "Name": "private-dns-dns-nlb"
            },
            "vpc_id": "vpc-016c5e3c216d28523",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dns_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:listener/net/private-dns-dns-nlb/203e9635d0bb75bf/b27e020da7526382",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:listener/net/private-dns-dns-nlb/203e9635d0bb75bf/b27e020da7526382",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:loadbalancer/net/private-dns-dns-nlb/203e9635d0bb75bf",
            "mutual_authentication": [],
            "port": 53,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.dns_nlb",
            "aws_lb_target_group.dns_tcp",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dns_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca",
            "arn_suffix": "targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "53",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-dns-dns-tcp-tg",
            "port": 53,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "private-dns-dns-tcp-tg"
            },
            "tags_all": {
              "Name": "private-dns-dns-tcp-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-016c5e3c216d28523"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-udp-tg/09ee5534bce1cbcd",
            "arn_suffix": "targetgroup/private-dns-dns-udp-tg/09ee5534bce1cbcd",
            "connection_termination": true,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "53",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-udp-tg/09ee5534bce1cbcd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-dns-dns-udp-tg",
            "port": 53,
            "preserve_client_ip": "true",
            "protocol": "UDP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "private-dns-dns-udp-tg"
            },
            "tags_all": {
              "Name": "private-dns-dns-udp-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-016c5e3c216d28523"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dns_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca-20251212172824199900000005",
            "port": 53,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca",
            "target_id": "i-09b6f736ab4c6460f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dns_server",
            "aws_iam_role.dns_server",
            "aws_instance.dns_server",
            "aws_lb_target_group.dns_tcp",
            "aws_security_group.dns_server",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca-20251212172824331200000008",
            "port": 53,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca",
            "target_id": "i-01bad253de819d520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dns_server",
            "aws_iam_role.dns_server",
            "aws_instance.dns_server",
            "aws_lb_target_group.dns_tcp",
            "aws_security_group.dns_server",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca-20251212172824319600000006",
            "port": 53,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-tcp-tg/5b74dac0c23d6cca",
            "target_id": "i-02e4de1db486a185c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dns_server",
            "aws_iam_role.dns_server",
            "aws_instance.dns_server",
            "aws_lb_target_group.dns_tcp",
            "aws_security_group.dns_server",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-udp-tg/09ee5534bce1cbcd-2025121217282439060000000a",
            "port": 53,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-udp-tg/09ee5534bce1cbcd",
            "target_id": "i-09b6f736ab4c6460f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dns_server",
            "aws_iam_role.dns_server",
            "aws_instance.dns_server",
            "aws_lb_target_group.dns_udp",
            "aws_security_group.dns_server",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-udp-tg/09ee5534bce1cbcd-20251212172824368800000009",
            "port": 53,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-udp-tg/09ee5534bce1cbcd",
            "target_id": "i-01bad253de819d520"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dns_server",
            "aws_iam_role.dns_server",
            "aws_instance.dns_server",
            "aws_lb_target_group.dns_udp",
            "aws_security_group.dns_server",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-udp-tg/09ee5534bce1cbcd-20251212172824329100000007",
            "port": 53,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:912753427850:targetgroup/private-dns-dns-udp-tg/09ee5534bce1cbcd",
            "target_id": "i-02e4de1db486a185c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.dns_server",
            "aws_iam_role.dns_server",
            "aws_instance.dns_server",
            "aws_lb_target_group.dns_udp",
            "aws_security_group.dns_server",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dns_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912753427850:security-group/sg-0fbcc40fdf7d500d0",
            "description": "Security group for private DNS server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP outbound",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS outbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow outbound to VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbcc40fdf7d500d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DNS TCP from VPC",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "DNS UDP from VPC",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-dns-dns-sg",
            "name_prefix": "",
            "owner_id": "912753427850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-dns-dns-sg"
            },
            "tags_all": {
              "Name": "private-dns-dns-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-016c5e3c216d28523"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912753427850:subnet/subnet-058042edc896dffa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058042edc896dffa7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912753427850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-dns-private-subnet-1"
            },
            "tags_all": {
              "Name": "private-dns-private-subnet-1"
            },
            "vpc_id": "vpc-016c5e3c216d28523"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912753427850:subnet/subnet-01218a8944ae46552",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01218a8944ae46552",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912753427850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-dns-private-subnet-2"
            },
            "tags_all": {
              "Name": "private-dns-private-subnet-2"
            },
            "vpc_id": "vpc-016c5e3c216d28523"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912753427850:subnet/subnet-08c74c5a4f555d8bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c74c5a4f555d8bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912753427850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-dns-private-subnet-3"
            },
            "tags_all": {
              "Name": "private-dns-private-subnet-3"
            },
            "vpc_id": "vpc-016c5e3c216d28523"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912753427850:vpc/vpc-016c5e3c216d28523",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082c262a710ae9a38",
            "default_route_table_id": "rtb-06186af10957ecc3e",
            "default_security_group_id": "sg-0700b1ad51b49f8d8",
            "dhcp_options_id": "dopt-0313bbff1cf5305a9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016c5e3c216d28523",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06186af10957ecc3e",
            "owner_id": "912753427850",
            "tags": {
              "Name": "private-dns-vpc"
            },
            "tags_all": {
              "Name": "private-dns-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}